cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_377.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/test_test.c:475: error: DEAD_STORE
  The value written to &c (type unsigned char) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/test_test.c:475:15: Write of unused value
473.              && TEST_char_ne('d', --c)
474.              && TEST_char_le('b', --c)
475.              && TEST_char_lt(c++, 'c')
                     ^
476.              /* unsigned char */
477.              && TEST_uchar_eq(22, uc++)
